# perceptron-from-scratch

./: .gitignore  README.md  conftest.py  pyproject.toml
examples/: and_gate.py  xor_failure.py
perceptron/: __init__.py  model.py
tests/: test_perceptron.py
