[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perceptron-from-scratch"
version = "0.1.0"
description = "A single-layer perceptron implemented from scratch with NumPy"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.7",
    "pytest>=7.4",
]

[tool.setuptools]
packages = ["perceptron"]
